--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@next/swc-wasm-nodejs": "^16.0.1",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.78.0",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "resend": "^6.4.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
